--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
     height: 70px;
     line-height: 70px;
     text-align: center;
-    background-image: url("images/header-background.png") ;
-    background-color: blue;
+    background-image: url("images/header-background.png");
 }
 
 #subcontainer {
@@ -56,8 +55,12 @@ body {
 
 #about p {
     margin: 10px;
-    font-size: 18px;
+    font-size: 12pt;
     font-family:sans-serif;
+}
+
+#projects h1 {
+    color: rgb(31, 61, 143);
 }
 
 .projectinfo {
@@ -75,12 +78,13 @@ body {
 .projectinfo h1 {
     margin-top: 5px;
     margin-bottom: 5px;
+    font-size: 18pt;
     color: rgb(46, 81, 156)
 
 }
 
 .projectinfo p {
-    font-size: 14pt;
+    font-size: 12pt;
     font-family:sans-serif;
 }
 
@@ -90,7 +94,7 @@ body {
 }
 .projectlink {
     display: inline-block;
-    font-size: 18px;
+    font-size: 16pt;
     font-weight: bold;
     color: rgb(21, 107, 146);
 }
@@ -122,20 +126,30 @@ a:active { text-decoration: none;}
         width: 100%;
         height: auto;
     }
+}
+/* No longer neccessary
     .sitelogo {
         font-size: 5vw;
         letter-spacing: 1vw;
     }
 
+    #projects h1 {
+        font-size: 5vw;
+    }
     #about p {
         font-size: 5vw;
     }
 
+    .projectinfo h1 {
+        font-size: 10vw;
+    }
+
     .projectinfo p {
-        font-size: 5vw;
+        font-size: 4vw;
     }
 
     .projectlink {
         font-size: 5vw;
     }
 }
+*/
